--- a/color.css
+++ b/color.css
@@ -77,7 +77,7 @@ header {
     -webkit-text-fill-color: transparent;
     display: inline-block;
 }
-
+/*seif pls help me*/
 :root {
     --millennial-pink: #F3CFC6;
     --light-beige: #F5E6D3;
